overflow schedule page fixed

--- a/css/index.css
+++ b/css/index.css
@@ -1190,7 +1190,8 @@ footer img {
 
     .styled-table table th,
     .styled-table table td {
-        padding: 20px 20px;
+        padding: 20px 9px;
+        /* x-axis padding from 25 to 8 - to fix overflow in mobile view */
     }
 
     .day-note {
